[tool.poetry]
name = "discovered-weekly"
version = "0.1.0"
description = ""
authors = ["Deep"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.18.0"
python-dotenv = "^0.17.1"
requests = "^2.30.0"
urllib3 = "^1.26"

[tool.poetry.dev-dependencies]
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
